init port to 1.21.1 neoforge